hphp/test/zend/bad/ext/sockets/tests/socket_accept-wrongparams.php
<?php
var_dump(socket_accept(null));